--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,8 +112,12 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
-		color: #666;
+		color: black;
 		line-height: 1.5em;
+	}
+
+  p {
+		color: black, !important;
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -122,7 +126,7 @@ input, select, textarea {
 	}
 
 		h1 a strong, h2 a strong, h3 a strong, h4 a strong, h5 a strong, h6 a strong {
-			color: #333;
+			color: black;
 		}
 
 	h2 {
@@ -159,6 +163,8 @@ input, select, textarea {
 		color: #666;
 	}
 
+
+	
 	em, i {
 		font-style: italic;
 	}
